--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
-@import "~bootstrap/scss/bootstrap.scss";
+
+@import "bootstrap.min.css";
 
 /* 
 
@@ -11,3 +12,35 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.form-group #jsonTextArea {
+    width: 95%;
+    margin: auto;
+}
+
+form {
+    margin-bottom: 2rem;
+}
+
+.row {
+    width: 95%;
+    margin: auto;
+    margin-bottom: 2rem;
+}
+
+textarea {
+    resize:none;
+}
+
+textarea::-webkit-scrollbar {
+    width: 1em;
+}
+
+textarea::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    color: white;
+    background-color: rgb(141, 141, 141);
+}
+
+textarea::-webkit-scrollbar-thumb {
+  outline: 1px solid rgb(22, 22, 22);
+}
