--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,6 +36,7 @@ textarea::-webkit-scrollbar {
 }
 
 textarea::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     color: white;
     background-color: rgb(141, 141, 141);
